--- a/package.json
+++ b/package.json
@@ -212,6 +212,7 @@
     "minimist": "1.2.0",
     "react": "15.4.1",
     "react-dom": "15.4.1",
+    "react-fontawesome": "^1.5.0",
     "react-helmet": "3.2.2",
     "react-responsive": "^1.2.6",
     "react-router": "3.0.0",
