--- a/.gitignore
+++ b/.gitignore
@@ -2,7 +2,16 @@
 coverage
 node_modules
 stats.json
-
+# new
+app
+internals
+server
+store
+appveyor.yml
+LICENSE.md
+log.txt
+package.json
+README.md
 # Cruft
 .DS_Store
 npm-debug.log
